# Project-1

./: CMakeLists.txt  README  README.MD
algorithms/: CMakeLists.txt
algorithms/include/: sorting.hpp
algorithms/include/heap/: heap.hpp
algorithms/include/sorting/: merge_sort.hpp
algorithms/src/: sorting.cpp
data/: array.txt  array2.txt
data_structures/: CMakeLists.txt
data_structures/include/: array_list.hpp
include/: menu.hpp  utils.hpp
libs/algorithms/include/heap/: heap.hpp
libs/data_structures/include/array_list/: array_list.hpp
libs/test/: array_list_test.cpp
python/: main.py
python/data/: bubble.txt  heap.txt  insertion.txt  merge.txt  quick.txt
src/: main.cpp  menu.cpp  utils.cpp
